samples/_failures_safe/1761541670_90f125_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45bd8597.c: In function ‘main’:
./samples/SAFE/__tmp_45bd8597.c:144:9: error: expected declaration or statement at end of input
  144 |         }
      |         ^
./samples/SAFE/__tmp_45bd8597.c:144:9: error: expected declaration or statement at end of input
